--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -196,7 +196,7 @@
   }
 
   .images-wrapper {
-    margin-left: 0;
+    margin-left: 25vw;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -210,7 +210,7 @@
   }
 
   .photo-content {
-    height: clamp(200px, 35vh, 260px);
+    /* height: clamp(200px, 35vh, 260px); */
     font-size: 60px;
   }
 
@@ -260,7 +260,7 @@
 
   .close-btn {
     top: 1rem;
-    right: 1rem;
+    right: 4rem;
     width: 2.5rem;
     height: 2.5rem;
     font-size: 26px;
@@ -273,7 +273,7 @@
   .images-wrapper {
     height: clamp(200px, 40vh, 280px);
     /* transform: translate(0%, -50%); */
-    margin-left: 3rem;
+    margin-left: max(3.5rem, 15vw);
   }
 
   /* Card */
